// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Edit draft]  Form data to edit draft 1`] = `
Object {
  "bccEmails": Array [
    "bccUser@criptext.com",
  ],
  "ccEmails": Array [
    "ccUser@criptext.com",
  ],
  "htmlBody": "<p>Modified body content</p>",
  "textSubject": "Email subject 1",
  "threadId": "1",
  "toEmails": Array [
    "toUser@criptext.com",
  ],
}
`;

exports[`[Form outgoing email]  Should form outgoing email from data 1`] = `
Object {
  "body": "<p>Hello</p>",
  "criptextRecipients": Array [
    Object {
      "recipientId": "toUser",
      "type": "to",
    },
    Object {
      "recipientId": "ccUser",
      "type": "cc",
    },
    Object {
      "recipientId": "bccUser",
      "type": "bcc",
    },
  ],
  "emailData": Object {
    "email": Object {
      "content": "<p>Hello</p>",
      "date": 1524861748481,
      "isMuted": false,
      "key": 1524861748481,
      "preview": "Hello",
      "secure": true,
      "status": 4,
      "subject": "Subject",
      "threadId": undefined,
      "unread": false,
    },
    "labels": Array [
      6,
    ],
    "recipients": Object {
      "bcc": Array [
        "bccUser@criptext.com",
      ],
      "cc": Array [
        "ccUser@criptext.com",
      ],
      "from": Array [
        "julian@criptext.com",
      ],
      "to": Array [
        "toUser@criptext.com",
      ],
    },
  },
  "externalRecipients": Object {
    "bcc": Array [],
    "cc": Array [],
    "to": Array [],
  },
}
`;

exports[`[Reply, Reply-all, Forward]  Form data to forward 1`] = `
Object {
  "bccEmails": Array [],
  "ccEmails": Array [],
  "files": Array [],
  "htmlBody": "<p>Modified body content</p>",
  "status": 1,
  "textSubject": "FW: Email subject 1",
  "threadId": undefined,
  "toEmails": Array [],
}
`;

exports[`[Reply, Reply-all, Forward]  Form data to forward: Forward attachments 1`] = `
Object {
  "bccEmails": Array [],
  "ccEmails": Array [],
  "files": Array [
    Object {
      "fileData": Object {
        "date": "2018-11-23 17:24:36",
        "emailId": 2,
        "ephemeral": 0,
        "ephemeralStart": 0,
        "ephemeralTime": 0,
        "id": 1,
        "iv": "cmwgnoveirgkddfg==",
        "key": "jocmpqwrwgonedbsfsq==",
        "mimeType": "image/png",
        "name": "Criptext_file_1.png",
        "readOnly": 0,
        "size": 149836,
        "status": 1,
        "token": "tokenFile1",
        "type": "image/png",
      },
      "iv": "cmwgnoveirgkddfg==",
      "key": "jocmpqwrwgonedbsfsq==",
      "mode": "uploaded",
      "percentage": 100,
      "shouldDuplicate": true,
      "token": "tokenFile1",
    },
  ],
  "htmlBody": "<p>Modified body content</p>",
  "status": 1,
  "textSubject": "FW: Email subject 2",
  "threadId": undefined,
  "toEmails": Array [],
}
`;

exports[`[Reply, Reply-all, Forward]  Form data to reply email 1`] = `
Object {
  "bccEmails": Array [],
  "ccEmails": Array [],
  "files": Array [],
  "htmlBody": "<p>Modified body content</p>",
  "status": 2,
  "textSubject": "RE: Email subject 1",
  "threadId": "1",
  "toEmails": Array [
    Object {
      "email": "fromUser@criptext.com",
    },
  ],
}
`;

exports[`[Reply, Reply-all, Forward]  Form data to reply-all 1`] = `
Object {
  "bccEmails": Array [],
  "ccEmails": Array [
    Object {
      "email": "ccUser@criptext.com",
    },
    Object {
      "email": "toUser@criptext.com",
    },
  ],
  "files": Array [],
  "htmlBody": "<p>Modified body content</p>",
  "status": 2,
  "textSubject": "RE: Email subject 1",
  "threadId": "1",
  "toEmails": Array [
    Object {
      "email": "fromUser@criptext.com",
    },
  ],
}
`;
